# ml-my-guide

./: .gitignore  README.md  environment.yml  introduction-to-pandas.ipynb  numpy.ipynb  pyproject.toml  readme.md  requirements.txt  sales_training.ipynb
data/: AFI's 100 Years...100 Movies - Wikipedia.html  activities_10.csv  activities_1_2_3.csv  activities_4.csv  activities_5.csv  activities_6.csv  activities_7.csv  activities_8.csv  activities_9.csv  employees.csv  sales.csv  sales_data.csv
gemini/alura/: gemini-python-course-1.ipynb
math/: average.ipynb  mean.ipynb  median.ipynb
matplotlib/: introduction.ipynb
matplotlib/alura/: Tipos_de_Visualização_de_Dados.ipynb  creating_graphics_with_python_libraries.ipynb
matplotlib/exercises/: bar-chart.ipynb  basic-exercises.ipynb  pie-chart.ipynb  w3c-exercises.ipynb
matplotlib/udemy/: plotting_and_data_visualization.ipynb
numpy/boson/: numpy.ipynb
numpy/exercises/: comparsion.ipynb  numpy-exercises.ipynb  reshape.ipynb
numpy/udemy/: introduction-to-numpy.ipynb
pandas/: null-data-exercises.ipynb  pandas-exercises.ipynb  sales_training.ipynb
pandas/alura/: agrouping-data.ipynb  cleaning-and-processing-data.ipynb  cleaning_and_processing-data.ipynb  knowning-the-library.ipynb  manipulating_operations.ipynb  pandas-io.ipynb  practicing-pandas-normalize-json.ipynb  selecting-and-agrouping-data.ipynb  transformation-and-manipulate-data.ipynb  working-with-nullable-data.ipynb
pandas/exercises/: data-series.ipynb  (+10 more)
plotly/: introduction.ipynb
seaborn/: exercises_seaborn.ipynb  introduction.ipynb
(+63 files in other folders)
